--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -1,4 +1,7 @@
-<h3>Hello!</h3>
-<p>Having grown up in rural Canada, I am a fan of the outdoors and love to take inspiration from the natural and the unknown. While they say pictures are worth a thousand words, I aim to create pictures that focus into a more precise and cohesive understanding. We are a social species, and despite having spent most of my childhood surrounded by nothing but trees and farmers fields I’ve come to love how we express eachothers ideas in words and pictures. I aim to inform people with the applications, layouts, painting and posters I design.<br>
-Every day we’re faced with situations and people we don’t fully understand. As a designer I aim to bridge gaps between creators and customers, developers and users -to help bring attainability and visual holesumess to those who need it. I love seeing my work come to life in both professional application and in animation.
+<h1 class="text-center" style="color: #444;"><i>Never Stand Still</i></h1>
+<p>
+I’m a freelance designer from Southern Ontario! One could summarise my passions as an inescapable drive to bring ideas to life! Either through motion animation or visual identity.
+I’ve studies design for almost three years and am now taking on freelance work and side projects due to my over attentive nature and desire to never stand still. The world of design is an ever-changing industry and it’s great being able to run with it and always learn new things. That’s why my motto is <i>Never Stand Still</i>, there so much out there and I know I’ll never find it if I don’t put one foot in front of the other and grab it myself!
+In my spare time, I enjoy sculpting, sketching, sewing and making videos.
+You can find more of my freelance illustration work and personal art on my blog at the bottom of the page.
 </p>
