fixed text errors

--- a/_includes/bio.html
+++ b/_includes/bio.html
@@ -1,7 +1,6 @@
 <p>
-I’m a freelance designer from Southern Ontario! One could summarise my passions as an inescapable drive to bring ideas to life! Either through motion animation or visual identity.
-I’ve studies design for almost three years and am now taking on freelance work and side projects due to my over attentive nature and desire to never stand still. The world of design is an ever-changing industry and it’s great being able to run with it and always learn new things. That’s why my motto is <i>Never Stand Still</i>, there so much out there and I know I’ll never find it if I don’t put one foot in front of the other and grab it myself!
+  I’m a freelance designer from Southern Ontario! One could summarise my passions as an inescapable drive to bring ideas to life! Either through motion animation or visual identity.
+I’ve studied design for almost three years and am now taking on freelance work and side projects due to my over attentive nature and desire to never stand still. The world of design is an ever-changing industry and it’s great being able to run with it and always learn new things. That’s why my motto is to never stand still, there so much out there and I know I’ll never find it if I don’t put one foot in front of the other and grab it myself!
 In my spare time, I enjoy sculpting, sketching, sewing and making videos.
-You can find more of my freelance illustration work and personal art on my blog at the bottom of the page.
 </p>
 <h4 class="text-center"><i>Never Stand Still</i></h4>
